修改新闻列表页：点击栏目跳转页面；修改资讯页面SEO

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -55,51 +55,51 @@
     </div>
 </header>
 
-<div class="hjc_hdNav">
+<div class="hjc_hdNav" style="position: fixed;">
 	<ul class="hdNav_ul">
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_1.png"></i>
+        	<i><img src="/images/grids_icon_01.png"></i>
             <p>开奖</p>
         </a></li>
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_6.png"></i>
-            <p>最新</p>
+        	<i><img src="/images/grids_icon_02.png"></i>
+            <p>走势</p>
         </a></li>
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_7.png"></i>
-            <p>积分</p>
+        	<i><img src="/images/grids_icon_03.png"></i>
+            <p>计划</p>
         </a></li>
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_8.png"></i>
-            <p>连中</p>
+        	<i><img src="/images/grids_icon_04.png"></i>
+            <p>排行</p>
         </a></li>
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_9.png"></i>
-            <p>粉丝</p>
+        	<i><img src="/images/grids_icon_05.png"></i>
+            <p>聊天</p>
         </a></li>
     	<li><a href="javascript:;">
-        	<i><img src="/images/33_10.png"></i>
+        	<i><img src="/images/grids_icon_06.png"></i>
 	            <p>高手</p>
 	        </a></li>
-	    <li><a href="javascript:;">
-	            <i><img src="/images/33_11.png"></i>
-	            <p>盈利</p>
+	    <li><a href="/News/Index/2">
+	            <i><img src="/images/grids_icon_07.png"></i>
+	            <p>资讯</p>
 	        </a></li>
 	    <li><a href="javascript:;">
-	            <i><img src="/images/33_12.png"></i>
-	            <p>打赏</p>
+	            <i><img src="/images/grids_icon_08.png"></i>
+	            <p>App</p>
 	        </a></li>
 	    <div style="clear:both;"></div>
 	</ul>
     <ul class="hdNav_cai">
         <li class="current"><a href="javascript:;">高频彩</a></li>
         <li><a href="javascript:;">全国彩</a></li>
-        <div style="clear:bothl;"></div>
+        <div style="clear:both;"></div>
     </ul>
 </div>
 
 
-    <div class="hjc_indexmain" style="margin-top: 283px;">
+    <div class="hjc_indexmain" style="margin-top: 291px;">
         <ul class="ind_mainUl2" style="border-top: 5px solid #f3f4f4;">
             <!--时时彩-->
             
