--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -3,7 +3,10 @@
     Layout = null;
 
     int currentLotteryTypeId = ViewBag.CurrentLotteryType;
-    long currentNewsTypeId = ViewBag.CurrentNewsTypeId;
+
+    NewsType newsType = ViewBag.CurrentNewsType;
+    long currentNewsTypeId = newsType==null?0:newsType.Id;
+
 }
 @model LotteryType
 
@@ -13,9 +16,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>@Model.SeoSubject</title>
-    <meta name="keywords" content="@Model.SeoKeyword">
-    <meta name="description" content="@Model.SeoDescription">
+
+    @if (Model.TypeName == "六合彩")
+    {
+        <title>@Model.SeoSubject</title>
+        <meta name="keywords" content="@Model.SeoKeyword">
+        <meta name="description" content="@Model.SeoDescription">
+    }
+    else
+    {
+        <title>@newsType.SeoSubject</title>
+        <meta name="keywords" content="@newsType.SeoKeyword">
+        <meta name="description" content="@newsType.SeoDescription">
+    }
     <link rel="stylesheet" href="~/css/dropload.css" />
     <link rel="stylesheet" type="text/css" href="~/css/dialog.css" />
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
@@ -32,14 +45,14 @@
     {
 
         <header class="hjc_header">
-            <a href="javascript:history.go(-1)" class="hjc_back"></a>
+            <a href="javascript:history.go(-1);" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo">@Model.TypeName</a>
         </header>
     }
     else
     {
         <header class="hjc_header">
-            <a href="javascript:history.go(-1)" class="hjc_back"></a>
+            <a href="javascript:history.go(-1);" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo">@Model.TypeName<span class="select_sign"></span></a>
         </header>
 
@@ -128,11 +141,15 @@
             {
                 if (item.Id == currentNewsTypeId)
                 {
-                        <li class="current" data-id="@item.Id" data-pageIndex="1" data-pageSize="10"><a href="javascript:;">@item.TypeName</a></li>
+                    <li class="current" data-id="@item.Id" data-pageIndex="1" data-pageSize="10">
+                        @Html.ActionLink(item.TypeName, "Index",new {id=item.LType, ntype =item.Id})
+                    </li>
                 }
                 else
                 {
-                        <li data-id="@item.Id" data-pageIndex="1" data-pageSize="10"><a href="javascript:;">@item.TypeName</a></li>
+                    <li data-id="@item.Id" data-pageIndex="1" data-pageSize="10">
+                        @Html.ActionLink(item.TypeName, "Index", new {id = item.LType, ntype = item.Id})
+                    </li>
                 }
             }
             </ul>
@@ -148,11 +165,15 @@
             {
                 if (item.Id == currentNewsTypeId)
                 {
-                  <li class="current" data-id="@item.Id" data-pageIndex="1" data-pageSize="10"><a href="javascript:;">@item.TypeName</a></li>
+                    <li class="current" data-id="@item.Id" data-pageIndex="1" data-pageSize="10">
+                        @Html.ActionLink(item.TypeName, "Index", new { id = item.LType, ntype = item.Id })
+                    </li>
                 }
                 else
                 {
-                  <li data-id="@item.Id" data-pageIndex="1" data-pageSize="10"><a href="javascript:;">@item.TypeName</a></li>
+                    <li data-id="@item.Id" data-pageIndex="1" data-pageSize="10">
+                        @Html.ActionLink(item.TypeName,"Index",new {id=item.LType, ntype = item.Id})
+                    </li>
                 }
             }
             </ul>
@@ -182,24 +203,26 @@
 
     <script type="text/javascript">
         var dropload;
+        var id = @currentNewsTypeId,
+           pageIndex =  1,
+           pageSize = 10;
         $(function () {
+            calcNavScoll();
 
-            var initElement = $(".info_hdNav_cai_lhs li.current");
-            initnews(initElement);
+            initnews();
 
-            $(".info_hdNav_cai_lhs li,.hdNav_cai li").click(function () {
-
-                initnews($(this));
-            });
         });
 
-        function initnews(clickElement) {
-            var id = clickElement.attr("data-id"),
-            pageIndex = clickElement.attr("data-pageindex") || 1,
-            pageSize = clickElement.attr("data-pagesize") || 10;
+        function calcNavScoll() {
+            var index = $(".info_hdNav_cai_lhs li.current").index();
+            if (index > 0) {
+                var liposition = $(".info_hdNav_cai_lhs li.current").position().left;
+                $(".info_hdNav_cai_lhs").scrollLeft(liposition);
+            }
+        }
 
-            if (!id) return;
-
+        function initnews() {
+           
             dropload = $("#news_"+id).dropload({
                 scrollArea: window,
                 domDown: {
@@ -226,7 +249,6 @@
                                 setTimeout(function () {
                                     $("#news_" + id + " .dropload-down").before(data);
                                     pageIndex++;
-                                    clickElement.attr("data-pageindex", pageIndex);
                                     // 每次数据加载完，必须重置
                                     dropload.resetload();
                                 }, 100);
