--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/LotteryTime.cshtml
@@ -21,7 +21,7 @@
 <body>
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">六合彩-开奖时间</a>
     </header>
 
