--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Post.cshtml
@@ -61,6 +61,7 @@
         {
             <!-- 福彩3D -->
             <table width="100%" border="1" bordercolor="#999" class="WanFa_TableA">
+                
                 <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">第一球</h3>
@@ -126,6 +127,13 @@
             <!-- 双色球 -->
             <table width="100%" border="1" bordercolor="#999" class="WanFa_TableA">
                 <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">红2胆</h3>
+                    </td>
+                    <td colspan="4" align="center" valign="middle" class="betContainer" id="xsq_q8">1，8</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xsq_q8','popup_num33','xsq');" data-id="xsq_q8" data-type="popup_num33" class="WF_Btn">选择号码</a></td>
+                </tr>
+                <tr>
                     <td width="18%" align="center" valign="middle">
                         <h3 class="WF_Ttitle">红3胆</h3>
                     </td>
@@ -169,25 +177,19 @@
                 </tr>
                 <tr>
                     <td align="center" valign="middle">
-                        <h3 class="WF_Ttitle">蓝球8码</h3>
-                    </td>
-                    <td colspan="4" align="center" valign="middle" class="betContainer" id="xsq_q7">1，2，5，6，8，2，3，4</td>
-                    <td align="center" valign="middle"><a href="javascript:openModule('xsq_q7','popup_num16','xsq');" data-id="xsq_q7" data-type="popup_num16" class="WF_Btn">选择号码</a></td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">
-                        <h3 class="WF_Ttitle">红2胆</h3>
-                    </td>
-                    <td colspan="4" align="center" valign="middle" class="betContainer" id="xsq_q8">1，8</td>
-                    <td align="center" valign="middle"><a href="javascript:openModule('xsq_q8','popup_num33','xsq');" data-id="xsq_q8" data-type="popup_num33" class="WF_Btn">选择号码</a></td>
-                </tr>
-                <tr>
-                    <td align="center" valign="middle">
-                        <h3 class="WF_Ttitle">蓝五码</h3>
+                        <h3 class="WF_Ttitle">蓝5码</h3>
                     </td>
                     <td colspan="4" align="center" valign="middle" class="betContainer" id="xsq_q9">1，2，5，6，8</td>
                     <td align="center" valign="middle"><a href="javascript:openModule('xsq_q9','popup_num16','xsq');" data-id="xsq_q9" data-type="popup_num16" class="WF_Btn">选择号码</a></td>
                 </tr>
+                <tr>
+                    <td align="center" valign="middle">
+                        <h3 class="WF_Ttitle">蓝8码</h3>
+                    </td>
+                    <td colspan="4" align="center" valign="middle" class="betContainer" id="xsq_q7">1，2，5，6，8，2，3，4</td>
+                    <td align="center" valign="middle"><a href="javascript:openModule('xsq_q7','popup_num16','xsq');" data-id="xsq_q7" data-type="popup_num16" class="WF_Btn">选择号码</a></td>
+                </tr>
+                
             </table>
             
         }
