--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Fans.cshtml
@@ -145,13 +145,7 @@
             }
         }
 
-        function xx(){
-            if (alertmsg1(1111)) {
-                alert("哈哈")
-            } else {
-                alert("取消")
-            };
-        }
+
        
 
     </script>
@@ -162,7 +156,7 @@
     <header class="hjc_header">
         <a href="/Personal/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">我的粉丝</a>
-        <a href="javascript:;" class="SX_A" onclick="xx();">排行榜</a>
+        <a href="/Personal/FansBang" class="SX_A">排行榜</a>
     </header>
 
     <div class="fans_Box">
