--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Login.cshtml
@@ -38,7 +38,7 @@
                         alertmsg(data.Msg);
 
                     } else {                       
-                            location.href = '/Personal'//跳转地址        
+                            location.href = '/Personal/Index'//跳转地址        
                     }
 
                 });
