--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -178,7 +178,7 @@
         </ul>
     </div>
 
-    <div class="Personal_footer">
+    @*<div class="Personal_footer">
         <ul class="Per_ftUl">
             <li>
                 <a href="/Home">
@@ -218,7 +218,7 @@
             </li>
             <div style="clear:both;"></div>
         </ul>
-    </div>
+    </div>*@
 
 
 </body>
