--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Set.cshtml
@@ -102,11 +102,11 @@
         </div>
         <div class="bottom">
 
-            <span id="clsoe" onclick="hideMask();" >取消</span>
-            <span id="btnZoomIn">+</span>
-            <span id="btnZoomOut">-</span>
+            <span id="clsoe" class="Btnsty_peyton" onclick="hideMask();" >取消</span>
+            <span id="btnZoomIn" class="Btnsty_peyton">+</span>
+            <span id="btnZoomOut" class="Btnsty_peyton">-</span>
 
-            <span id="btnok">选取</span>
+            <span id="btnok" class="Btnsty_peyton">选取</span>
             @*<input type="button" id="btnClose" onclick="hideMask();" value="取消" />
 
           
