--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -1,108 +1,100 @@
 ﻿@using C8.Lottery.Model
-@using C8.Lottery.Public
 @{
     Layout = null;
-
-
-
+    UserInfo user = ViewBag.UserInfo;
 }
-
 <!DOCTYPE html>
-
-
 
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-<title>首页</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+    <title>首页</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/runTime3.js"></script>
-
 </head>
-
 <body>
-
-<header class="hjc_header" style="text-align:left;">
-    <a href="javascript:;" class="hjc_logo" style="margin-left: 10px;"><img src="/images/03.png"></a>
-    <div class="hjc_hdDZ">
-        @if (Request["UserId"] != null)
-        {
-            string sessionId = Convert.ToString(Request["UserId"]);
-            int userId=Convert.ToInt32(CacheHelper.GetCache(sessionId));
-            UserInfo user = (UserInfo)ViewData["user"];
-
-            if (user != null)
-            {
-                <a href="/Personal/Index">Hi,@user.Name</a>
-                <a href="/Personal/logOut">退出</a>
-            }
-            else
+    <header class="hjc_header" style="text-align:left;">
+        <a href="javascript:;" class="hjc_logo" style="margin-left: 10px;"><img src="/images/03.png"></a>
+        <div class="hjc_hdDZ">
+            @if (user == null)
             {
                 <a href="/Home/Login">登录</a>
                 <a href="/Home/Register">注册</a>
             }
-        }
-        else
-        {
-            <a href="/Home/Login">登录</a>
-            <a href="/Home/Register">注册</a>
-        }
-    
+            else
+            {
+                <a href="/Personal/Index">Hi,@user.Name</a>
+                <a href="/Personal/logOut">退出</a>
+            }
 
+        </div>
+    </header>
+    <div class="hjc_hdNav" style="position: fixed;">
+        <ul class="hdNav_ul">
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_01.png"></i>
+                    <p>开奖</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_02.png"></i>
+                    <p>走势</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_03.png"></i>
+                    <p>计划</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_04.png"></i>
+                    <p>排行</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_05.png"></i>
+                    <p>聊天</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_06.png"></i>
+                    <p>高手</p>
+                </a>
+            </li>
+            <li>
+                <a href="/News/Index/2">
+                    <i><img src="/images/grids_icon_07.png"></i>
+                    <p>资讯</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i><img src="/images/grids_icon_08.png"></i>
+                    <p>App</p>
+                </a>
+            </li>
+            <div style="clear:both;"></div>
+        </ul>
+        <ul class="hdNav_cai col2">
+            <li class="current"><a href="javascript:;">高频彩</a></li>
+            <li><a href="javascript:;">全国彩</a></li>
+            <div style="clear:both;"></div>
+        </ul>
     </div>
-</header>
-
-<div class="hjc_hdNav" style="position: fixed;">
-	<ul class="hdNav_ul">
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_01.png"></i>
-            <p>开奖</p>
-        </a></li>
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_02.png"></i>
-            <p>走势</p>
-        </a></li>
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_03.png"></i>
-            <p>计划</p>
-        </a></li>
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_04.png"></i>
-            <p>排行</p>
-        </a></li>
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_05.png"></i>
-            <p>聊天</p>
-        </a></li>
-    	<li><a href="javascript:;">
-        	<i><img src="/images/grids_icon_06.png"></i>
-	            <p>高手</p>
-	        </a></li>
-	    <li><a href="/News/Index/2">
-	            <i><img src="/images/grids_icon_07.png"></i>
-	            <p>资讯</p>
-	        </a></li>
-	    <li><a href="javascript:;">
-	            <i><img src="/images/grids_icon_08.png"></i>
-	            <p>App</p>
-	        </a></li>
-	    <div style="clear:both;"></div>
-	</ul>
-    <ul class="hdNav_cai">
-        <li class="current"><a href="javascript:;">高频彩</a></li>
-        <li><a href="javascript:;">全国彩</a></li>
-        <div style="clear:both;"></div>
-    </ul>
-</div>
-
 
     <div class="hjc_indexmain" style="margin-top: 291px;">
         <ul class="ind_mainUl2" style="border-top: 5px solid #f3f4f4;">
             <!--时时彩-->
-            
+
             @foreach (LotteryRecord record in ViewBag.openList)
             {
                 int lType = record.lType;
@@ -111,7 +103,7 @@
                 {
                     string iconName = record.ShowIconName + ".png";
                     string[] numArr = record.Num.Split(',');
-                    
+
                     <li>
                         <div class="UL2_hd">
                             <a href="javascript:;">
@@ -124,8 +116,9 @@
                             <div class="UL3_bdinfo1">
                                 <p lType="@record.lType">
                                     <font>第<span>@record.Issue</span>期</font>
-                                    <font>下期开奖：
-                                        
+                                    <font>
+                                        下期开奖：
+
                                         @if (record.ShowOpenTime == "正在开奖")
                                         {
                                             <span>正在开奖</span>
@@ -138,68 +131,66 @@
                                             string hour = timeArr[0];
                                             string min = timeArr[1];
                                             string sec = timeArr[2];
-                                            
+
                                             <span><t class="hour">@hour</t>:<t class="minute">@min</t>:<t class="second">@sec</t></span>
                                         }
-
                                     </font>
                                 </p>
                             </div>
                             <div class="UL3_bdinfo2">
                                 <div class="ball_wrap">
-                                    
-                                    
-                                        @if (lType >= 9 && lType <= 62)
-                                        {
-                                            foreach (string s in numArr)
-                                            {
-                                                if (s == "19" || s == "20")
-                                                {
-                                                    <span class="ball_spB ball_red">@s</span>
-                                                }
-                                                else
-                                                {
-                                                    <span class="ball_spB ball_blue">@s</span>
-                                                }
 
-                                            }
-                                        }
-                                        else if (lType == 65)
+
+                                    @if (lType >= 9 && lType <= 62)
+                                    {
+                                        foreach (string s in numArr)
                                         {
-                                            int a = int.Parse(numArr[0]);
-                                            int b = int.Parse(numArr[1]);
-                                            int c = int.Parse(numArr[2]);
-                                            int sum = a + b + c;
-                                            
-                                            <span class="ball_spB ball_blue">@numArr[0]</span>
+                                            if (s == "19" || s == "20")
+                                            {
+                                                <span class="ball_spB ball_red">@s</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="ball_spB ball_blue">@s</span>
+                                            }
+
+                                        }
+                                    }
+                                    else if (lType == 65)
+                                    {
+                                        int a = int.Parse(numArr[0]);
+                                        int b = int.Parse(numArr[1]);
+                                        int c = int.Parse(numArr[2]);
+                                        int sum = a + b + c;
+
+                                        <span class="ball_spB ball_blue">@numArr[0]</span>
                                             <span class="ball_spB ball_blue">+</span>
                                             <span class="ball_spB ball_blue">@numArr[1]</span>
                                             <span class="ball_spB ball_blue">+</span>
                                             <span class="ball_spB ball_blue">@numArr[2]</span>
                                             <span class="ball_spB ball_blue">=</span>
                                             <span class="ball_spB ball_blue">@sum</span>
-                                        }
-                                        else if (lType == 63 || lType == 64)
+                                    }
+                                    else if (lType == 63 || lType == 64)
+                                    {
+                                        foreach (string s in numArr)
                                         {
-                                            foreach (string s in numArr)
-                                            {
-                                                string clazz = "ball_spA No" + s;
-                                                <span class="@clazz">@s</span>
-                                            }
+                                            string clazz = "ball_spA No" + s;
+                                            <span class="@clazz">@s</span>
                                         }
+                                    }
 
-                                    
-                                 
+
                                 </div>
                                 <div class="UL3_ZZKJ">
                                     <p>正在开奖中...</p>
                                 </div>
                             </div>
                             <div class="UL3_bdinfo3">
-                                
-                                
-                                
-                            
+
+
+
+
                                 <a href="javascript:;" class="UL2_baif3a">计划</a>
                                 <a href="javascript:;" class="UL2_baif3a">双面</a>
                                 <a href="javascript:;" class="UL2_baif3a">长龙</a>
@@ -213,11 +204,11 @@
                     </li>
                 }
             }
-        
+
         </ul>
         <ul class="ind_mainUl2" style="display:none;">
-            
-            
+
+
             @foreach (LotteryRecord record in ViewBag.openList)
             {
                 int lType = record.lType;
@@ -226,7 +217,7 @@
                 {
                     string iconName = record.ShowIconName + ".png";
                     string[] numArr = record.Num.Split(',');
-                    
+
                     <li>
                         <div class="UL2_hd">
                             <a href="javascript:;">
@@ -234,16 +225,15 @@
                                 <div class="UL2_hdtit"><h3>@record.ShowTypeName</h3></div>
                                 <span class="UL2_hdicon"></span>
                             </a>
-
                         </div>
                         <div class="UL2_bd">
                             <div class="UL3_bdinfo1">
                                 <p lType="@record.lType">
                                     <font>第<span>@record.Issue</span>期</font>
                                     @*<font>下期开奖：<span>556:16</span></font>*@
+                                    <font>
+                                        下期开奖：
 
-                                    <font>下期开奖：
-                                        
                                         @if (record.ShowOpenTime == "正在开奖")
                                         {
                                             <span>正在开奖</span>
@@ -256,24 +246,20 @@
                                             string hour = timeArr[0];
                                             string min = timeArr[1];
                                             string sec = timeArr[2];
-                                            
+
                                             <span><t class="hour">@hour</t>:<t class="minute">@min</t>:<t class="second">@sec</t></span>
                                         }
-
                                     </font>
-
-
 
                                 </p>
                             </div>
                             <div class="UL3_bdinfo2">
                                 <div class="ball_wrap">
-                                    
+
                                     @foreach (string s in numArr)
                                     {
                                         <span class="ball_spB ball_blue">@s</span>
                                     }
-
                                 </div>
                                 <div class="UL3_ZZKJ">
                                     <p>正在开奖中...</p>
@@ -293,18 +279,15 @@
                     </li>
                 }
             }
-          
+
         </ul>
-</div>
-
-<footer class="hjc_footer">
-	<div class="hjc_ftNav">
-    	<span>触屏版</span>|<a href="javascript:;">电脑版</a>
     </div>
-    <div class="hjc_ftphone">永久域名：m.1369p.com</div>
-    <p class="hjc_ftcopy">© 2016 皇家直播1369p.me 版权所有</p>
-</footer>
-
+    <footer class="hjc_footer">
+        <div class="hjc_ftNav">
+            <span>触屏版</span>|<a href="javascript:;">电脑版</a>
+        </div>
+        <div class="hjc_ftphone">永久域名：m.1369p.com</div>
+        <p class="hjc_ftcopy">© 2016 皇家直播1369p.me 版权所有</p>
+    </footer>
 </body>
 </html>
-
