首页开奖 计划

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@
         	<i><img src="/images/grids_icon_02.png"></i>
             <p>走势</p>
         </a></li>
-    	<li><a href="javascript:;">
+    	<li><a href="/Home/Plan">
         	<i><img src="/images/grids_icon_03.png"></i>
             <p>计划</p>
         </a></li>
@@ -197,15 +197,13 @@
                             </div>
                             <div class="UL3_bdinfo3">
                                 
-                                
-                                
                             
-                                <a href="javascript:;" class="UL2_baif3a">计划</a>
+                                <a href="/Plan/Index/@record.lType" class="UL2_baif3a">计划</a>
                                 <a href="javascript:;" class="UL2_baif3a">双面</a>
                                 <a href="javascript:;" class="UL2_baif3a">长龙</a>
                                 <a href="javascript:;" class="UL2_baif3a">走势</a>
                                 <a href="/Record/OpenRecord/?lType=@record.lType" class="UL2_baif3a">历史</a>
-                                <a href="javascript:;" class="UL2_baif3a">发帖</a>
+                                <a href="/Plan/Post/@record.lType" class="UL2_baif3a">发帖</a>
                                 <a href="javascript:;" class="UL2_baif3a">排行</a>
                                 <div style="clear:both;"></div>
                             </div>
@@ -280,12 +278,12 @@
                                 </div>
                             </div>
                             <div class="UL3_bdinfo3">
-                                <a href="javascript:;" class="UL2_baif3a">计划</a>
+                                <a href="/Plan/Index/@record.lType" class="UL2_baif3a">计划</a>
                                 <a href="javascript:;" class="UL2_baif3a">双面</a>
                                 <a href="javascript:;" class="UL2_baif3a">长龙</a>
                                 <a href="javascript:;" class="UL2_baif3a">走势</a>
                                 <a href="/Record/OpenRecord/?lType=@record.lType" class="UL2_baif3a">历史</a>
-                                <a href="javascript:;" class="UL2_baif3a">发帖</a>
+                                <a href="/Plan/Post/@record.lType" class="UL2_baif3a">发帖</a>
                                 <a href="javascript:;" class="UL2_baif3a">排行</a>
                                 <div style="clear:both;"></div>
                             </div>
