--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -32,7 +32,7 @@
         <input type="hidden" id="lType" value="@ViewBag.lType" />
 
         <header class="hjc_header">
-            <a href="javascript:;" class="hjc_back"></a>
+            <a href="/Home/Index" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo">@title</a>
             <div class="Plan_QiHao">
                 <p class="QiHao_tit">近10期</p>
